# fastapi-app-example

./: Dockerfile  README.md  docker-compose.yml  makefile  migrations.json  pyproject.toml
app/: database.py  dependecies.py  main.py
app/api/v1/: router.py  user.py
app/api/v1/routes/: user.py
app/models/: base.py  task.py  user.py
app/schemas/: task.py
migrations/: 0001_migration_202403051054.py
